--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 				<button id="cancel-btn" class="ripple" onclick="location.reload();" href="#">cancel</button>
 			</div>
 			<div id="downloadInfo" style="display:none;">
-				<p id="downloadDeets"> <span class="material-icons">file_download</span> <b>download successful</b> | quality: <b><span id="vidQuality"></span></b> | file type: <span id="vidType"><b></b></span> | <b><a id="vidDL" download>download</a></b></p>
+				<p id="downloadDeets"> <span class="material-icons">file_download</span> <b>download successful</b> | quality: <b><span id="vidQuality"></span></b> | <b><a id="vidDL" download>download</a></b></p>
 			</div>
 			<div id="error">
 				<div style="height:5px;"></div>
@@ -48,7 +48,7 @@
 				<label>Language: </label><select id="lang"><option value="en">English</option><option value="es">Spanish (BTEA)</option></select><br>
 				<label>Theme: </label><select id="theme"><option value="T1">Default (Dark)</option><option value="T2">Light</option></select><br>
 				<div style="height:5px;"></div>
-				<button onclick="save()" class="ripple">save</button>
+				<button onclick="save()">save</button>
 				<div style="height:5px;"></div>
 			</div>
 			<div id="player" style="display:none;"></div>
