--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 				<h1 id="title" style="font-family:Arial;">taylor</h1>
 				<p id="welcome">taylor is a high-quality, simple, ad-free youtube downloader.</p>
 				<p id="wel_txt"><a href="#" onclick="document.getElementById('settings').style.display = 'block';">settings</a> | <a href="#" onclick="legal()">legal</a></p>
-				<input id="input_text" autocomplete="off" placeholder="put in stuff"></input><button href="#" id="download" onclick="download()">download</button><button id="search" href="#" class="ripple" onclick="search()">search</button>
+				<input id="input_text" autocomplete="off" placeholder="put in stuff"></input><button href="#" id="download" onclick="download()">download</button>
 			</div>	
 			<div id="loading">
 				<div id="ajaxloader"></div>
