--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			<div id="header">
 				<h1 id="title" style="font-family:Arial;">taylor</h1>
 				<p id="welcome">taylor is a high-quality, simple, ad-free youtube downloader.</p>
-				<input id="input_text" autocomplete="off" placeholder="put in stuff"></input><button href="#" id="download" onclick="download()">download</button>
+				<input id="input_text" autocomplete="off" placeholder="https://www.youtube.com/watch?v=HmZKgaHa3Fg"></input><button href="#" id="download" onclick="download()">download</button>
 			</div>	
 			<div class="spacer"></div>
 			<div id="loading">
