--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 				<p id="war_txt"></p>
 				<div style="height:5px;"></div>
 			</div>
-			<p id="footer">please use this service only as to archive your favorite content and not to reupload other's content without proper credit. <b>non-embeddable videos do not work with this service.</b></p>
+			<p id="footer">please use this service only as to archive your favorite content and not to reupload other's content without proper credit. <b>non-embeddable videos and videos that are blocked in the US do not work with this service.</b></p>
 		</center>
 		<script src="js/index.js"></script>
 		<style id="logoColor"></style>
