adds video preview again :)

--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
 				<button id="cancel-btn" class="ripple" onclick="location.reload();" href="#">cancel</button>
 			</div>
 			<div id="downloadInfo" style="display:none;">
-				<h1 class="material-icons check">check</h1>
+				<h1 class="material-icons check"><b>check</b></h1>
 				<p id="downloadDeets"> <span class="material-icons">file_download</span> <b>download successful</b> | quality: <b><span id="vidQuality"></span></b> | <b><a id="vidDL" download>download</a></b></p>
+				<video id="video" controls></video>
 			</div>
 			<div id="error">
 				<div style="height:5px;"></div>
