--- a/index.html
+++ b/index.html
@@ -24,9 +24,12 @@
 			</div>
 			<div id="downloadInfo" style="display:none;">
 				<h1 class="material-icons check"><b>check</b></h1>
-				<p id="downloadDeets"><span style="font-size:18px;" class="material-icons">file_download</span> <b>download successful</b> | quality: <b><span id="vidQuality"></span></b> | file type: <b><span id="fileType"></span></b> | <b><a id="vidDL" download>download</a></b></p>
+				<p id="downloadDeets"><span style="font-size:18px;" class="material-icons">file_download</span> <b>download successful</b> | quality: <b><span id="vidQuality"></span></b> | file type: <b><span id="fileType"></span></b></p>
 				<video id="video" controls></video>
-				<button onclick="location.reload();">start a new download <span style="font-size:12px;" class="material-icons">refresh</span></button>
+				<div id="footer">
+					<a id="vidDL"><button>download this video <span style="font-size:12px;" class="material-icons">file_download</span></button></a>
+					<button onclick="location.reload();">start a new download <span style="font-size:12px;" class="material-icons">refresh</span></button>
+				</div>
 			</div>
 			<div id="error">
 				<div style="height:5px;"></div>
