removes quality block from audio download

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			</div>
 			<div id="downloadInfo" style="display:none;">
 				<h1 class="material-icons check"><b>check</b></h1>
-				<p id="downloadDeets"><span style="font-size:18px;" class="material-icons">file_download</span> <b>download successful</b> | quality: <b><span id="vidQuality"></span></b> | file type: <b><span id="fileType"></span></b> <span id="audioBitrateBlock">| audio bitrate: <b><span id="audioBitrate"></span>kbps</b></span></p>
+				<p id="downloadDeets"><span style="font-size:18px;" class="material-icons">file_download</span> <b>download successful</b> <span id="qBlock">| quality: <b><span id="vidQuality"></span></b></span> | file type: <b><span id="fileType"></span></b> <span id="audioBitrateBlock">| audio bitrate: <b><span id="audioBitrate"></span>kbps</b></span></p>
 				<video id="video" controls></video>
 				<div id="buttons">
 					<a id="vidDL" onclick="redir();"><button>download this video <span style="font-size:12px;" class="material-icons">file_download</span></button></a>
