--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 		<center>
 			<div id="header">
 				<h1 id="title" style="font-family:Arial;">taylor</h1><img id="tay" src="img/tay.png">
+				<h2 style="font-family:Arial;">please use our new service <a href="/portaldl">portaldl</a></h2>
 				<p id="welcome">taylor is a high-quality, simple, ad-free youtube downloader.</p>
 				<input id="input_text" autocomplete="off" placeholder="https://www.youtube.com/watch?v=HmZKgaHa3Fg"></input><button class="download" id="download" onclick="dl()">download video</button><button id="audioBtn" class="download" onclick="audio()">download audio</button>
 			</div>	
